Cluster/manifests/blue-green/nginx-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue
  labels:
    app: nginx
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      version: blue
  template:
    metadata:
      labels:
        app: nginx
        version: blue
    spec:
      containers:
      - name: nginx
        image: 19980617/harness:9phxvQsXQmiBdO2fdSAUHQ  # Blue version
        ports:
        - containerPort: 80
