Cluster/manifests/blue-green/nginx-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service  # Single service pointing to the active deployment
spec:
  selector:
    app: nginx
    version: blue  # Initially pointing to Blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
