Cluster/manifests/blue-green/nginx-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue
spec:
  selector:
    app: nginx
    version: blue  # Initially pointing to Blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
