Cluster/manifests/blue-green/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-app
    version: blue  # Initially points to Blue, change to Green when switching
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
