Cluster/manifests/blue-green/nginx-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue-service
spec:
  selector:
    app: nginx
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-green-service
spec:
  selector:
    app: nginx
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
